added configuration, hidden injector and a better UI look

--- a/ExampleHook/ExampleHook.vcxproj.filters
+++ b/ExampleHook/ExampleHook.vcxproj.filters
@@ -911,6 +911,9 @@
     <ClInclude Include="scheduler.hpp">
       <Filter>source\scheduler</Filter>
     </ClInclude>
+    <ClInclude Include="ini.hpp">
+      <Filter>libraries</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <MASM Include="scheduler_asm.asm">
