--- a/ExampleHook/ExampleHook.vcxproj
+++ b/ExampleHook/ExampleHook.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="ini.hpp" />
     <ClInclude Include="minhook\buffer.h" />
     <ClInclude Include="minhook\hde\hde32.h" />
     <ClInclude Include="minhook\hde\hde64.h" />
