--- a/HiddenInjector/HiddenInjector.vcxproj
+++ b/HiddenInjector/HiddenInjector.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="exports.cpp" />
     <ClCompile Include="manualmapper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
